# sherlock

./: pyproject.toml
sherlock/: __about__.py  cgur.sublime-workspace  sherlock.py
